--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
 		"vite": "^3.2.4",
-		"vitest": "^0.25.3"
+		"vitest": "^0.25.3",
+		"postcss": "^8.4.14",
+		"postcss-load-config": "^4.0.1",
+		"autoprefixer": "^10.4.7",
+		"tailwindcss": "^3.1.5"
 	},
 	"type": "module"
 }
