--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@supabase/auth-helpers-sveltekit": "^0.8.6",
 		"@supabase/supabase-js": "^2.2.2"
 	}
 }
